# MatLabC-

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  build.sh
EXPORT/docs/: 918749016749174.md  ACTION_PLAN.md  ACTIVE_WINDOW_COMPLETE.md  ACTIVE_WINDOW_DEMO.md  ACTIVE_WINDOW_MATH_COMPLETE.md  ACTIVE_WINDOW_QUICKSTART.md  AUTOMATION_SUMMARY.md  BUILD.md  BUILD_AUTOMATION_READY.md  BUILD_BASIC_GUIDE.md  BUILD_NOW.md  BUILD_QUICKSTART.md  BUILD_SCRIPTS_GUIDE.md  BUILD_SYSTEM_COMPLETE.md  BUILD_V0.4.0.md  BUNDLE_ARCHITECTURE.md  BUNDLE_CHECKLIST.md  BUNDLE_INTEGRATION.md  BUNDLE_QUICKREF.md  CLEANUP_AND_ORGANIZE.md  CODEBASE_REVIEW.md  CRITICAL_MATLAB_FEATURES.md  CRYSTALLOGRAPHY_EXPANSION_PLAN.md  DEMO_SIMULATION.md  DISTRIBUTION_CHEATSHEET.md  DISTRIBUTION_COMPARISON.md  DISTRIBUTION_QUICKSTART.md  ENTERPRISE_STRESS_TEST_GUIDE.md  EXAMPLES_BUNDLE.md  FEATURES.md  FOR_NORMAL_PEOPLE.md  GETTING_STARTED.md  GPU_STRESS_TESTS_README.md  INSTALL_OPTIONS.md  MATERIALS_ACCURACY_VERIFICATION.md  MATERIALS_DATABASE.md  MATH_ACCURACY_QUICKREF.md  MATH_ACCURACY_TESTS.md  MATLAB_COMPATIBILITY.md  MATRIX_STRESS_COMPLETE_STATUS.md  (+37 more)
EXPORT/m/: basic_demo.m  beam_deflection_publish_demo.m  business_dashboard_demo.m  chemical_builder.m  damped_oscillator_physics.m  engineering_report_demo.m  gpu_benchmark.m  linear_algebra.m  materials_lookup.m  materials_optimization.m  projectile_motion_physics.m  signal_processing.m  test_math_accuracy.m
EXPORT/old/: SHELL_TOOLS_QUICK_REF.txt  build.bat  debug.cfg  excodetoimpliment.cpp  launch_build.bat  readbasics.txt  readbasics0.txt  readme3.txt  setup_project.bat  test_demo.bat  test_v0.2.0.cpp
EXPORT/old/tools/: CMakeLists.txt  INSTALLER.md  build_and_check.sh  build_installer.sh  bundle_installer.cpp  mlab_pkg.cpp
EXPORT/old/v0.3.0/: # Build the GUI Builder.txt  00_CRITICAL_BUILD_FIX.md  ACTION_PLAN_FINAL_IMPLEMENTATION.md  ALL_RUNME_FILES_SUMMARY.txt  BOTH_ERRORS_FIXED_REBUILD.txt  BUILD.md  CMAKE_NOT_FOUND_FIX.txt  CMakeLists.txt  COMMAND_LINE_INTEGRATION_SUMMARY.md  COMPILATION_ERRORS_FIXED.txt  CORRECT_ENVIRONMENT_SETUP.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DEVELOPER_INSTALL_GUIDE.md  DIVERGENCE_STRATEGY_v0.3.0_vs_v0.3.1.md  DO_THIS_FIRST.txt  ERROR_FIXED_TRY_NOW.txt  ERROR_REPORT_OPENGL_SPHERE.md  EXECUTE_NOW.txt  EXECUTE_NOW_STEP_BY_STEP.txt  EXECUTION_CHECKLIST.txt  FILES_SETUP_ICONS.md  FINAL_EXECUTION_SUMMARY.txt  FINAL_EXECUTIVE_SUMMARY.md  FINAL_SUMMARY_QUICK_READ.txt  FIX_CMAKE_CACHE_CORRUPTED.txt  FIX_CMAKE_ERRORS.txt  GLOBAL_INTEGRATION_COMPLETE_GUIDE.md  ICON_SETUP.md  ICON_SETUP_COMPLETE.md  INCLUDE_DIRECTORY_REVIEW.md  ISSUE_SUMMARY_OPENGL_SPHERE.md  LINKER_ERROR_FIXED.txt  NEXT_PHASE_MAKE_IT_GLOBAL.md  NEXT_STEPS_CHOOSE_YOUR_PATH.txt  PROJECT_STATUS_COMPLETE_PICTURE.md  QUICK_FIX_WSL_BUILD.txt  README.md  README_SETUP_ICONS.txt  (+64 more)
EXPORT/old/v0.3.0/examples/cli/: inference_demo.txt
EXPORT/old/v0.3.0/examples/cpp/: basic_ode.cpp  material_inference.cpp
EXPORT/old/v0.3.0/examples/matlab/: matlabhypothetical.txt
EXPORT/old/v0.3.0/examples/real_world/: drone_arm_design.py
EXPORT/old/v0.3.0/examples/scripts/: beam_simple_3d.c  helix_plot.c
EXPORT/old/v0.3.0/include/: matlabcpp.hpp
EXPORT/old/v0.3.0/include/matlabcpp/: advanced.hpp  constants.hpp  system.hpp
EXPORT/old/v0.3.0/installers/: MatLabCpp_Setup_v0.3.1.iss
EXPORT/old/v0.3.0/powershell/: BuilderGUI.cs  BuilderGUI.csproj  COMPLETE_STATUS_v0.3.0.md  CROSS_PLATFORM_GUIDE.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_DELIVERY_REPORT.md  FIX_WSL_ISSUES.md  GUI_IMPLEMENTATION_GUIDE.md  Generate-PDF.ps1  INDEX.md  INSTALL_PACKAGE_GUIDE.md  Install.ps1  MatLabCppPowerShell.cs  MatLabCppPowerShell.csproj  NEW_FILES_SUMMARY.md  PACKAGE_COMPLETE.md  PDF_GENERATION.md  POWERSHELL_GUIDE.md  POWERSHELL_SUMMARY.md  Package.ps1  README.md  SESSION_ACCOMPLISHMENTS.md  STATUS_COMPLETE.md  SimplifiedTests.ps1  Test-Functions.ps1  VERSION_0.3.0_TEST_RESULTS.md  build_native.ps1  build_native.sh  fix_lineendings.ps1  install.sh  matlabcpp_c_bridge.c  test_syntax.ps1
EXPORT/old/v0.3.0/powershell/examples/: BeamAnalysis.ps1
EXPORT/old/v0.3.0/powershell/tools/: BUILD_ALL.sh  README.md  code_deployer.sh  code_reader.cpp  gpu_monitor.sh  memory_leak_detector.c  perf_profiler.c  test_runner.sh  write_speed_benchmark.cpp
EXPORT/old/v0.3.0/scripts/: COMMAND_WRAPPERS.md  Create-MatlabExamples.ps1  Test-CommandWrappers.ps1  build.sh  create-matlab-examples.sh  install.sh  mlc  mlc.cmd  mlcpp  mlcpp.cmd  mlcpp.ps1  test.sh
EXPORT/old/v0.3.0/src/: main.cpp
EXPORT/old/v0.3.0/v0.3.0/cli/: comparison.txt
EXPORT/old/v0.3.0/v0.3.0/matlab/: matlabhypothetical.c  ode_solving.m
EXPORT/old/v0.3.0/v0.3.0/python/: constraint_solving.py
EXPORT/old/v0.3.0/v0.3.0/scripts/: beam_3d.m  helix_plot.m  leakage_sim.c  leakage_sim.m
EXPORT/scripts/: build_and_setup.sh  build_basic.sh  cleanup_project.sh  enterprise_stress_test.sh  launch_build.sh  run_beta_test_00.sh  setup_project.sh  stress_test.sh
demos/: PUBLISH_STYLING_README.md  publish_styling_demo.m
docs/: PLOTTING_PUBLICATION_QUALITY.md  USER_TESTING_GUIDE.md
examples/: EXAMPLES_COMPLETE.md  MATHEMATICAL_C_CPP_WEAVE.md  MATLAB_FORMAT_GUIDE.md  MATLAB_MULTI_FORMAT_COMPLETE.md  MATLAB_vs_MatLabCPP.md  README.md  SOLUTION_TREE_VISUAL.md  START_HERE_NAVIGATION.md  materials_smart_demo.cpp
examples/cli/: basic_usage.txt  material_lookup.txt
examples/cpp/: 3D_VISUALIZATION_README.md  PLOTTING_ASCII_DEMO.md  beam_stress_3d.cpp  demo_pipeline.cpp  multi_material_analysis.cpp  plotting_demo.cpp
examples/matlab/: ACCURACY_TESTING_RESULTS.md  (+3 more)
include/: matlabcpp.hpp
src/: active_window.cpp  benchmark_inference.cpp  debug_flags.cpp  main.cpp  materials_smart.cpp  matrix_parser.cpp  value.cpp
tests/: cpu_matrix_manual.txt  manual_test_v0.3.1.txt  run_gpu_stress_tests.m  run_matrix_stress_both_modes.sh  stress_linear_accuracy.m  stress_matrix_parallel.m  stress_matrix_parallel_cpu_only.m  stress_tensor.m  stress_vector_parallel.m  test_active_window.cpp
(+76 files in other folders)
